--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -76,9 +76,9 @@
                     <div class="article-item">
                         <div class="article-repeat-x"></div>
                     </div>
-                    <li class="article-item">
+                    <div class="article-item">
                         <div class="article-repeat-y"></div>
-                    </li>
+                    </div>
                     <div class="article-item">
                         <div class="article-space"></div>
                     </div>
