--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -101,7 +101,7 @@
                         <div class="article-fixed"></div>
                     </div>
                     <div class="article-item">
-                        <div class="article-locol">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim nemo
+                        <div class="article-locol"> dolor sit, amet consectetur adipisicing elit. Enim nemo
                             culpa
                             error placeat reiciendis nobis voluptatem quas iure expedita, ut suscipit, dolorem explicabo
                             doloremque sed. Odit sint sapiente optio quod amet illum totam culpa aut ullam vero tempora
