--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -191,8 +191,8 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+            </div>
         </main>
     </div>
     </div>
