--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -62,7 +62,7 @@
                                 <ul class="menu__sub-list">
                                     <li class="menu__sub-item"><a href="#stretch" class="menu__sub-link">Stretch</a>
                                     </li>
-                                    <li class="menu__sub-item"><a href="#flex-start"
+                                    <li class="menu__sub-item"><a href="#flex-start-align"
                                             class="menu__sub-link">Flex-Start</a></li>
                                     <li class="menu__sub-item"><a href="#flex-end-align"
                                             class="menu__sub-link">Flex-End</a></li>
@@ -433,7 +433,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="flex-start" class="align-items__flex-start flex-start-align">
+                    <div id="flex-start-align" class="align-items__flex-start flex-start-align">
                         <h2 class="flex-start-align__title">align-items:flex-start;</h2>
                         <div class="flex-start-align__list">
                             <div class="flex-start-align__item">
@@ -516,7 +516,7 @@
                 </div>
             </div>
             <div id="order" class="page__order order">
-                <div id="order" class="order__container">
+                <div class="order__container">
                     <h2 class="order__title">order:3;</h2>
                     <div class="order__list">
                         <div class="order__item">
@@ -648,8 +648,7 @@
             <div class="footer__container">
                 <a href="#top" class="footer__link">upstairs ^</a>
             </div>
-    </div>
-    </footer>
+        </footer>
     </div>
 </body>
 
