--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -54,10 +54,10 @@
                             <div class="form-contacts__line form-contacts__line--radio">
                                 <h2 class="form-contacts__title">Сonfirmation that you are 18 years old</h2>
                                 <input checked class="form-contacts__input form__input--radio" id="age-01" required
-                                    autocomplete="off" value="yes" name="age" type="radio">
+                                    value="yes" name="age" type="radio">
                                 <label class="form__label form__label--radio" for="age-01">Yes</label>
                                 <input checked class="form-contacts__input form__input--radio" id="age-02" required
-                                    autocomplete="off" value="no" name="age" type="radio">
+                                    value="no" name="age" type="radio">
                                 <label class="form__label form__label--radio" for="age-02">No</label>
                             </div>
                             <div class="form-contacts__line form-contacts__line--checkbox">
