--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travellian</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -58,7 +58,7 @@
                         </div>
                         <div class="main__line main__line--list">
                             <label class="main__label" for="person">Person</label>
-                            <select class="main__input main__input--list" name="list">
+                            <select class="main__input main__input--list" id="person" name="list">
                                 <option value="">1</option>
                                 <option value="">2</option>
                                 <option value="">3</option>
@@ -93,7 +93,7 @@
                         <div class="slider-main__slide swiper-slide">
                             <div class="slider-main__image">
                                 <picture>
-                                    <source src="img/main/slider/background.webp" type="image/webp">
+                                    <source srcset="img/main/slider/background.webp" type="image/webp">
                                     <img src="img/main/slider/background.jpg" alt="background">
                                 </picture>
                             </div>
@@ -101,7 +101,7 @@
                         <div class="slider-main__slide swiper-slide ">
                             <div class="slider-main__image">
                                 <picture>
-                                    <source src="img/main/slider/background.webp" type="image/webp">
+                                    <source srcset="img/main/slider/background.webp" type="image/webp">
                                     <img src="img/main/slider/background.jpg" alt="background">
                                 </picture>
                             </div>
@@ -109,7 +109,7 @@
                         <div class="slider-main__slide swiper-slide">
                             <div class="slider-main__image">
                                 <picture>
-                                    <source src="img/main/slider/background.webp" type="image/webp">
+                                    <source srcset="img/main/slider/background.webp" type="image/webp">
                                     <img src="img/main/slider/background.jpg" alt="background">
                                 </picture>
                             </div>
@@ -117,7 +117,7 @@
                         <div class="slider-main__slide swiper-slide">
                             <div class="slider-main__image">
                                 <picture>
-                                    <source src="img/main/slider/background.webp" type="image/webp">
+                                    <source srcset="img/main/slider/background.webp" type="image/webp">
                                     <img src="img/main/slider/background.jpg" alt="background">
                                 </picture>
                             </div>
@@ -125,7 +125,7 @@
                         <div class="slider-main__slide swiper-slide">
                             <div class="slider-main__image">
                                 <picture>
-                                    <source src="img/main/slider/background.webp" type="image/webp">
+                                    <source srcset="img/main/slider/background.webp" type="image/webp">
                                     <img src="img/main/slider/background.jpg" alt="background">
                                 </picture>
                             </div>
@@ -171,7 +171,7 @@
                                             media="(min-width:992px)">
                                         <source srcset="img/popular/berlin_germany_288_320.webp" type="image/webp"
                                             media="(max-width:992px)"> -->
-                                        <source src="img/popular/berlin_germany.webp" type="image/webp">
+                                        <source srcset="img/popular/berlin_germany.webp" type="image/webp">
                                         <img src="img/popular/berlin_germany.jpg" alt="berlin">
                                     </picture>
                                 </div>
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="swiper-popular__image">
                                     <picture>
-                                        <source src=" img/popular/london_united_kingdom.webp" type="image/webp">
+                                        <source srcset=" img/popular/london_united_kingdom.webp" type="image/webp">
                                         <img src="img/popular/london_united_kingdom.jpg" alt="background">
                                     </picture>
                                 </div>
@@ -199,7 +199,7 @@
                                 </div>
                                 <div class="swiper-popular__image">
                                     <picture>
-                                        <source src=" img/popular/venice_italy.webp" type="image/webp">
+                                        <source srcset=" img/popular/venice_italy.webp" type="image/webp">
                                         <img src="img/popular/venice_italy.jpg" alt="background">
                                     </picture>
                                 </div>
@@ -214,7 +214,7 @@
                                 </div>
                                 <div class="swiper-popular__image">
                                     <picture>
-                                        <source src=" img/popular/lisbon_portugal.webp" type="image/webp">
+                                        <source srcset=" img/popular/lisbon_portugal.webp" type="image/webp">
                                         <img src="img/popular/lisbon_portugal.jpg" alt="background">
                                     </picture>
                                 </div>
@@ -228,7 +228,7 @@
                                 </div>
                                 <div class="swiper-popular__image">
                                     <picture>
-                                        <source src=" img/popular/berlin_germany.webp" type="image/webp">
+                                        <source srcset=" img/popular/berlin_germany.webp" type="image/webp">
                                         <img src="img/popular/berlin_germany.jpg" alt="background">
                                     </picture>
                                 </div>
